--- a/assets/sass/trees.sass
+++ b/assets/sass/trees.sass
@@ -1,5 +1,9 @@
 .bg-tree-container
-
+  height: 100%
+  width: 100%
+  position: absolute
+  overflow: hidden
+  pointer-events: none  
   
 .bg-tree
   position: absolute
